--- a/Drum-Project/style.css
+++ b/Drum-Project/style.css
@@ -2,12 +2,4 @@ body{
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-.drum-buttons{
-    gap: 32px;
-}
-p{
-    padding: 0;
-    margin: 0;
-}
+    justify-content: center;}
