--- a/Drum-Project/style.css
+++ b/Drum-Project/style.css
@@ -1,5 +1,43 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
 body{
+    background-color: black;
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;}
+    justify-content: center;
+}
+.drum-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 32px
+}
+.drum{
+    background-color: rgb(7, 7, 7);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    transition: 0.5s;
+    height: 99px;
+    width: 99px;
+    border: solid 1px white;
+}
+.playing{
+    transform: scale(1.2);
+    border: orange 1px solid;
+    box-shadow: 0 0 10px orange;
+}
+p{
+    color: orange;
+    font-size: 12px;
+}
+h1{
+    color: white;
+    font-size: 36px;
+}
